--- a/wplayer.vcxproj
+++ b/wplayer.vcxproj
@@ -115,7 +115,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\base\Common.cpp" />
+    <ClCompile Include="src\base\TrackBar.cpp" />
+    <ClCompile Include="src\base\Window.cpp" />
+    <ClCompile Include="src\DesktopWindow\DesktopWindow.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MainWindow\MainWindow.cpp" />
+    <ClCompile Include="src\PlayerControls\PlayListView.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\base\Common.h" />
+    <ClInclude Include="src\base\TrackBar.h" />
+    <ClInclude Include="src\base\Window.h" />
+    <ClInclude Include="src\DesktopWindow\DesktopWindow.h" />
+    <ClInclude Include="src\MainWindow\MainWindow.h" />
+    <ClInclude Include="src\PlayerControls\PlayListView.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
