--- a/wplayer.vcxproj.filters
+++ b/wplayer.vcxproj.filters
@@ -16,14 +16,17 @@
     <Filter Include="src">
       <UniqueIdentifier>{a73f58dc-f1c6-437c-a87c-a0f3d7ba5403}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\base">
-      <UniqueIdentifier>{4804a8b0-4a2f-490f-8b9d-d7089dc63537}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\AudioSupport">
       <UniqueIdentifier>{3c2e0cb7-1b25-4553-ac50-eda90a135116}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\base">
+      <UniqueIdentifier>{4804a8b0-4a2f-490f-8b9d-d7089dc63537}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\DesktopWindow">
       <UniqueIdentifier>{b30fc059-6e00-4b52-888b-f89aa6196f7d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\LyricsSupport">
+      <UniqueIdentifier>{5a51fd4c-ec24-442c-875a-362f23740348}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\MainWindow">
       <UniqueIdentifier>{8e3d9408-5d45-467a-9ace-d19f637704d0}</UniqueIdentifier>
@@ -47,6 +50,9 @@
     </ClCompile>
     <ClCompile Include="src\DesktopWindow\DesktopWindow.cpp">
       <Filter>src\DesktopWindow</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LyricsSupport\lyrics.cpp">
+      <Filter>src\LyricsSupport</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
@@ -73,6 +79,9 @@
     </ClInclude>
     <ClInclude Include="src\DesktopWindow\DesktopWindow.h">
       <Filter>src\DesktopWindow</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LyricsSupport\lyrics.h">
+      <Filter>src\LyricsSupport</Filter>
     </ClInclude>
     <ClInclude Include="src\MainWindow\MainWindow.h">
       <Filter>src\MainWindow</Filter>
