--- a/wplayer/wplayer.vcxproj.filters
+++ b/wplayer/wplayer.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="src\DrawSupport">
       <UniqueIdentifier>{0429cec4-67f5-4f3c-9661-64cac3bc84fb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\LyricsSettingDialog">
+      <UniqueIdentifier>{d260cdb4-71ff-4d92-b660-dcff190aec03}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\MainWindow">
       <UniqueIdentifier>{8e3d9408-5d45-467a-9ace-d19f637704d0}</UniqueIdentifier>
     </Filter>
@@ -57,6 +60,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\LyricsSettingDialog\LyricsSettingDialog.cpp">
+      <Filter>src\LyricsSettingDialog</Filter>
+    </ClCompile>
     <ClCompile Include="src\MainWindow\MainWindow.cpp">
       <Filter>src\MainWindow</Filter>
     </ClCompile>
@@ -82,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="src\DrawSupport\DrawSupport.h">
       <Filter>src\DrawSupport</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LyricsSettingDialog\LyricsSettingDialog.h">
+      <Filter>src\LyricsSettingDialog</Filter>
     </ClInclude>
     <ClInclude Include="src\MainWindow\MainWindow.h">
       <Filter>src\MainWindow</Filter>
