--- a/wplayer/wplayer.vcxproj.filters
+++ b/wplayer/wplayer.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="src\DrawSupport">
       <UniqueIdentifier>{0429cec4-67f5-4f3c-9661-64cac3bc84fb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\LyricsEditorDialog">
+      <UniqueIdentifier>{76194da2-b945-4f2a-9db2-9b2aced3ee0c}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\LyricsSettingDialog">
       <UniqueIdentifier>{d260cdb4-71ff-4d92-b660-dcff190aec03}</UniqueIdentifier>
     </Filter>
@@ -60,6 +63,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\LyricsEditorDialog\LyricsEditorDialog.cpp">
+      <Filter>src\LyricsEditorDialog</Filter>
+    </ClCompile>
     <ClCompile Include="src\LyricsSettingDialog\LyricsSettingDialog.cpp">
       <Filter>src\LyricsSettingDialog</Filter>
     </ClCompile>
@@ -88,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="src\DrawSupport\DrawSupport.h">
       <Filter>src\DrawSupport</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LyricsEditorDialog\LyricsEditorDialog.h">
+      <Filter>src\LyricsEditorDialog</Filter>
     </ClInclude>
     <ClInclude Include="src\LyricsSettingDialog\LyricsSettingDialog.h">
       <Filter>src\LyricsSettingDialog</Filter>
